# paymaster

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: branch.yml  main.yml  mainnet.yml  publish.yml  release.yml  telegram.yml
contracts/: README.md  Scarb.toml
contracts/src/: forwarder.cairo
contracts/tests/: forwarder_test.cairo  helper.cairo  lib.cairo  mocks.cairo
contracts/tests/mocks/: account_mock.cairo  erc20_mock.cairo
crates/paymaster/: Cargo.toml
crates/paymaster-cli/: Cargo.toml
crates/paymaster-cli/src/: constants.rs  main.rs
crates/paymaster-cli/src/command/: mod.rs
crates/paymaster-cli/src/command/balance/: mod.rs  utils.rs
crates/paymaster-cli/src/command/empty/: mod.rs
crates/paymaster-cli/src/command/forwarder/: build.rs
crates/paymaster-cli/src/command/gas_tank/: build.rs
crates/paymaster-cli/src/command/quick_setup/: mod.rs
crates/paymaster-cli/src/command/relayer/: build.rs  deploy.rs  mod.rs  rebalance.rs
crates/paymaster-cli/src/command/setup/: mod.rs
crates/paymaster-cli/src/core/: mod.rs
crates/paymaster-cli/src/core/starknet/transaction/: deploy.rs  invoke.rs  mod.rs  status.rs  transfer.rs
crates/paymaster-cli/src/validation/: mod.rs
crates/paymaster-common/: Cargo.toml
crates/paymaster-common/src/: lib.rs  macros.rs
crates/paymaster-common/src/cache/: mod.rs
crates/paymaster-common/src/concurrency/: mod.rs  shared.rs  workers.rs
crates/paymaster-common/src/service/: mod.rs  runner.rs
crates/paymaster-common/src/service/fallback/: mod.rs
crates/paymaster-common/src/service/messaging/: message.rs  mod.rs
crates/paymaster-common/src/service/monitoring/: http.rs  metric.rs  mod.rs  tracer.rs
crates/paymaster-execution/: Cargo.toml
crates/paymaster-execution/src/: error.rs  lib.rs
crates/paymaster-execution/src/diagnostics/: client.rs  context.rs  extractor.rs  mod.rs
crates/paymaster-execution/src/diagnostics/extractors/: avnu.rs  mod.rs
crates/paymaster-execution/src/execution/: build.rs  deploy.rs  execute.rs  mod.rs
crates/paymaster-execution/src/execution/fee/: estimate.rs  mod.rs  overhead.rs
crates/paymaster-execution/src/filter/: mod.rs
crates/paymaster-execution/src/starknet/: mod.rs
crates/paymaster-execution/src/testing/: mod.rs  transaction.rs
crates/paymaster-execution/src/tokens/: mod.rs
crates/paymaster-prices/: Cargo.toml
crates/paymaster-prices/src/: decimals.rs  lib.rs
crates/paymaster-prices/src/avnu/: mod.rs
crates/paymaster-prices/src/coingecko/: mod.rs
crates/paymaster-prices/src/math/: mod.rs
crates/paymaster-prices/src/mock/: mod.rs
crates/paymaster-relayer/: Cargo.toml
crates/paymaster-relayer/src/: lib.rs  relayer.rs
crates/paymaster-relayer/src/context/: configuration.rs  mod.rs  relayers.rs
crates/paymaster-relayer/src/lock/: mod.rs
crates/paymaster-relayer/src/lock/mock/: mod.rs
crates/paymaster-relayer/src/lock/seggregated/: mod.rs
crates/paymaster-relayer/src/lock/shared/: lock.rs  mod.rs
crates/paymaster-relayer/src/monitoring/: availability.rs  balance.rs  gas_tank.rs  mod.rs  transaction.rs
crates/paymaster-relayer/src/rebalancing/: mod.rs
crates/paymaster-relayer/src/swap/: mod.rs
crates/paymaster-relayer/src/swap/client/: mod.rs
crates/paymaster-relayer/src/swap/client/avnu/: mod.rs
crates/paymaster-relayer/src/swap/client/avnu/models/: mod.rs
crates/paymaster-relayer/src/swap/client/mock/: mod.rs
crates/paymaster-rpc/: Cargo.toml
crates/paymaster-rpc/src/: client.rs  lib.rs  server.rs
crates/paymaster-rpc/src/context/: configuration.rs  mod.rs
crates/paymaster-rpc/src/endpoint/: build.rs  execute.rs  execute_raw.rs  health.rs  mod.rs  token.rs
crates/paymaster-rpc/src/endpoint/common/: mod.rs
crates/paymaster-rpc/src/endpoint/validation/: mod.rs
crates/paymaster-rpc/src/middleware/: authentication.rs  mod.rs  payload.rs
crates/paymaster-rpc/src/testing/: mod.rs
crates/paymaster-service/: Cargo.toml  build.rs
crates/paymaster-service/src/: main.rs  version.rs
crates/paymaster-service/src/core/: mod.rs  tracing.rs
crates/paymaster-service/src/core/context/: configuration.rs  environment.rs  mod.rs
crates/paymaster-service/src/rpc/: mod.rs
crates/paymaster-sponsoring/: Cargo.toml
crates/paymaster-sponsoring/src/: lib.rs  self_sponsoring.rs  webhook_sponsoring.rs
crates/paymaster-starknet/: Cargo.toml
crates/paymaster-starknet/src/: constants.rs  gas.rs  lib.rs  network.rs
crates/paymaster-starknet/src/client/: mod.rs
crates/paymaster-starknet/src/contract/: abi.rs  mod.rs
crates/paymaster-starknet/src/math/: mod.rs
crates/paymaster-starknet/src/testing/: mod.rs  transaction.rs
crates/paymaster-starknet/src/transaction/: gas.rs  mod.rs  time.rs  version.rs
crates/paymaster-starknet/src/transaction/call/: calldata.rs  mod.rs  transfer.rs
crates/paymaster-starknet/src/types/: mod.rs
crates/paymaster-starknet/src/values/: decoding.rs  encoding.rs
crates/paymaster/src/rpc/: mod.rs
docker/: cli.dockerfile  paymaster.dockerfile
docs/specification/: paymaster.openrpc.json
resources/monitoring/: Dockerfile  otel-collector.yaml
resources/specification/: configuration.json
resources/testing/scripts/: build_transfer_transaction.sh
resources/testing/starknet/: Dockerfile  blockchain.json  generate-blockchain.sh
resources/testing/starknet/contracts/paymaster/: Funder.json
website/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  knip.json  package.json  vite.config.js
website/src/: App.jsx  index.css
website/src/config/: app-config.js
