[workspace]
resolver = "2"
members = [
    "crates/paymaster-starknet",
    "crates/paymaster-relayer",
    "crates/paymaster-prices",
    "crates/paymaster-service",
    "crates/paymaster-rpc",
    "crates/paymaster-common", 
    "crates/paymaster-execution",
    "crates/paymaster-sponsoring",
    "crates/paymaster-cli", 
    "crates/paymaster",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
repository = "https://github.com/starkware-libs/papyrus/"
license = "GPL-3"

[workspace.dependencies]
paste = "1.0.15"
futures-core = "0.3.31"
async-trait = "0.1.88"
bigdecimal = "0.4.7"
chrono = "0.4.41"
deadpool-redis = "0.20.0"
envy = "0.4.2"
futures = "0.3.31"
indexmap = "2.7.1"
jsonrpsee = "0.24.9"
log = "0.4.27"
moka = "0.12.10"
rand = "0.9.1"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.139"
serde_with = "3.14.0"
simple_logger = "5.0.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }
testcontainers = "0.23.3"
thiserror = "2.0.11"
tokio = "1.43.0"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.31.0"
uuid = "1.17.0"
mongodb = { version = "3.2.1", features = ["dns-resolver"] }
base64 = "0.22.1"
num-traits = "0.2.19"
http-body = "1.0.1"
hyper = "1.6.0"
regex = "1.11.1"
lazy_static = "1.5.0"
failsafe = "1.3.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = "0.29.0"
opentelemetry_sdk = "0.29.0"
wiremock = "0.5"
