[package]
name = "paymaster-common"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
failsafe = "1.3.0"
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros", "rt-multi-thread"] }
futures-core = { workspace = true }
moka = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ['attributes'] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
serde = { version = "1.0.218", features = ["derive"] }
base64 = { workspace = true }
tracing-opentelemetry = { version = "0.30.0", features = ["metrics_gauge_unstable"] }
tracing-subscriber = { workspace = true }